<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- name and bio card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="24dp"/>

    <!-- profile card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="#FAFAFA"
        app:layout_constraintTop_toBottomOf="@id/profile_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Name -->
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/portfolio_name"
                android:textColor="#22223B"
                android:textSize="26sp"
                android:textStyle="bold" />

            <!-- Bio -->
            <TextView
                android:id="@+id/tvBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:text="@string/portfolio_bio"
                android:textColor="#4A4E69"
                android:textSize="16sp" />

            <!-- section divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="12dp"
                android:background="#E0E0E0" />

            <!-- Skills Section-->
            <TextView
                android:id="@+id/tvSkillsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/skills_title"
                android:textColor="#3F51B5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- section divider -->
            <TextView
                android:id="@+id/tvSkills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/skills_list"
                android:textColor="#22223B"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="#E0E0E0" />

            <!-- Projects section -->
            <TextView
                android:id="@+id/tvProjectsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/projects_title"
                android:textColor="#3F51B5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/projects_list"
                android:textColor="#22223B"
                android:textSize="15sp" />

            <!-- sction divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="#E0E0E0" />

            <!-- Contact section -->
            <TextView
                android:id="@+id/tvContactTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/contact_title"
                android:textColor="#3F51B5"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/contact_info"
                android:textColor="#22223B"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>